--- a/public/index.html
+++ b/public/index.html
@@ -25,15 +25,15 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
-    <link rel="stylesheet" type="text/css" href="assets/vendor/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="assets/fonts/iconic/css/material-design-iconic-font.min.css">
-    <link rel="stylesheet" type="text/css" href="assets/vendor/animate/animate.css">
-    <link rel="stylesheet" type="text/css" href="assets/vendor/css-hamburgers/hamburgers.min.css">
-    <link rel="stylesheet" type="text/css" href="assets/vendor/animsition/css/animsition.min.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/util.min.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/main.css">
+    <link rel="stylesheet" type="text/css" href="/assets/fonts/iconic/css/material-design-iconic-font.min.css">
+    <link rel="stylesheet" type="text/css" href="/assets/vendor/animate/animate.css">
+    <link rel="stylesheet" type="text/css" href="/assets/vendor/css-hamburgers/hamburgers.min.css">
+    <link rel="stylesheet" type="text/css" href="/assets/vendor/animsition/css/animsition.min.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/util.min.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/main.css">
+
 </head>
-<body>
+<body class="animsition">
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="root"></div>
 <!--
@@ -46,10 +46,10 @@
   To begin the development, run `npm start` or `yarn start`.
   To create a production bundle, use `npm run build` or `yarn build`.
 -->
-<script src="assets/vendor/jquery/jquery-3.2.1.min.js"></script>
-<script src="assets/vendor/animsition/js/animsition.min.js"></script>
-<script src="assets/vendor/bootstrap/js/popper.js"></script>
-<script src="assets/vendor/bootstrap/js/bootstrap.min.js"></script>
-<script src="assets/js/main.js"></script>
+<script type="text/javascript" src="/assets/vendor/jquery/jquery-3.2.1.min.js"></script>
+<script type="text/javascript" src="/assets/vendor/animsition/js/animsition.min.js"></script>
+<script type="text/javascript" src="/assets/vendor/bootstrap/js/popper.js"></script>
+<script type="text/javascript" src="/assets/vendor/bootstrap/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="/assets/js/main.js"></script>
 </body>
 </html>
