--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
             name="description"
             content="Web site created using create-react-app"
     />
+    <meta property="og:title" content="Nông Lâm News"/>
+    <meta property="og:description" content="Luôn mang đến tin tức mới nhất cho bạn"/>
+    <meta property="og:image" content="%PUBLIC_URL%/logo.png"/>
+    <meta property="og:url" content="https://news-website-e7591.web.app/"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
     <!--
       manifest.json provides metadata used when your web app is installed on a
